visibility fix

--- a/src/containers/NewHeader/NHeader.css
+++ b/src/containers/NewHeader/NHeader.css
@@ -68,7 +68,7 @@
     } 
 }
 
-@media (min-width: 1080px) {
+@media (min-width: 1367px) {
     .nheader-component{
         height: 7%;
         width: 95%;
